--- a/index.html
+++ b/index.html
@@ -1,136 +1,150 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Unity WebGL Player | DePantherWebXRTest</title>
-  <meta name="description" content="" />
-  <!-- <link rel="shortcut icon" href="TemplateData/favicon.ico" />
-  <link rel="stylesheet" href="TemplateData/style.css" /> -->
-
-  <!-- Load A-Frame -->
-  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-
-  <!-- Load AR.js for A-Frame -->
-  <script src="https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js"></script>
-</head>
-<body>
-
-  <!-- UNITY CONTAINER (FULLY COMMENTED OUT)
-  <div id="unity-container">
-    <div id="unity-canvas-container">
-      <canvas id="unity-canvas" style="width: 100%; height: 100%;"></canvas>
-    </div>
-    <div id="unity-loading-bar">
-      <div id="unity-logo"></div>
-      <div id="unity-progress-bar-empty">
-        <div id="unity-progress-bar-full"></div>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Unity WebGL Player | {{{ PRODUCT_NAME }}}</title>
+    <meta name="description" content="{{{ DESCRIPTION }}}">
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
+  </head>
+  <body>
+    <div id="unity-container">
+      <div id="unity-canvas-container" style="position: absolute; top: 0; left: 0; z-index: 1; width: 100%; height: 100%;">
+        <canvas id="unity-canvas" style="background-color: transparent;"></canvas>
+      </div>
+      <div id="unity-loading-bar">
+        <div id="unity-logo"></div>
+        <div id="unity-progress-bar-empty">
+          <div id="unity-progress-bar-full"></div>
+        </div>
+      </div>
+      <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
+        <button id="entervr" value="Enter VR" disabled>VR</button>
+        <button id="enterar" value="Enter AR" disabled>AR</button>
+        <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank" title="WebXR Export">WebXR Export</a></div>
+        <div id="unity-build-title">{{{ PRODUCT_NAME }}}</div>
       </div>
     </div>
-    <div id="unity-footer">
-      <div id="unity-webgl-logo"></div>
-      <button id="entervr" value="Enter VR" disabled>VR</button>
-      <button id="enterar" value="Enter AR" disabled>AR</button>
-      <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank">WebXR Export</a></div>
-      <div id="unity-build-title">DePantherWebXRTest</div>
-    </div>
-  </div>
-  -->
+  <!-- AR.js & A-Frame -->
+  <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 
-  <!-- AR.js Scene -->
-  <a-scene embedded arjs>
-    <a-marker id="image-marker" type="pattern" url="markers/pattern-Test.patt">
-      <a-box position="0 0.5 0" material="color: red;"></a-box>
-    </a-marker>
+  <a-scene
+    vr-mode-ui="enabled: false"
+    renderer="logarithmicDepthBuffer: true"
+    embedded
+    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 0;">
+    
+      <!-- Marker or NFT here -->
+    <a-nft
+      type="nft"
+      url="Descriptors/Test" 
+      smooth="true"
+      smoothCount="10"
+      smoothTolerance="0.01"
+      smoothThreshold="5"
+      id="my-marker">
+
+      <a-box color="red" position="0 0.5 0"></a-box>
+
+    </a-nft>
     <a-entity camera></a-entity>
   </a-scene>
+    <script>
+      var buildUrl = "Build";
+      var loaderUrl = buildUrl + "/{{{ LOADER_FILENAME }}}";
+      var config = {
+        dataUrl: buildUrl + "/{{{ DATA_FILENAME }}}",
+        frameworkUrl: buildUrl + "/{{{ FRAMEWORK_FILENAME }}}",
+        codeUrl: buildUrl + "/{{{ CODE_FILENAME }}}",
+#if MEMORY_FILENAME
+        memoryUrl: buildUrl + "/{{{ MEMORY_FILENAME }}}",
+#endif
+#if SYMBOLS_FILENAME
+        symbolsUrl: buildUrl + "/{{{ SYMBOLS_FILENAME }}}",
+#endif
+        streamingAssetsUrl: "StreamingAssets",
+        companyName: "{{{ COMPANY_NAME }}}",
+        productName: "{{{ PRODUCT_NAME }}}",
+        productVersion: "{{{ PRODUCT_VERSION }}}",
 
-  <!-- UNITY SCRIPT BLOCK (FULLY COMMENTED OUT)
-  <script>
-    var buildUrl = "Build";
-    var loaderUrl = buildUrl + "/UnityWebARTest.loader.js";
-    var config = {
-      dataUrl: buildUrl + "/UnityWebARTest.data",
-      frameworkUrl: buildUrl + "/UnityWebARTest.framework.js",
-      codeUrl: buildUrl + "/UnityWebARTest.wasm",
-      streamingAssetsUrl: "StreamingAssets",
-      companyName: "DefaultCompany",
-      productName: "DePantherWebXRTest",
-      productVersion: "0.1.0",
-      webglContextAttributes: {
-        alpha: true,
-        preserveDrawingBuffer: true
-      }
-    };
-
-    var container = document.querySelector("#unity-container");
-    var canvas = document.querySelector("#unity-canvas");
-    var canvasContainer = document.querySelector("#unity-canvas-container");
-    var loadingBar = document.querySelector("#unity-loading-bar");
-    var progressBarFull = document.querySelector("#unity-progress-bar-full");
-    var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-    var unityInstance = null;
-    var unityReady = false;
-
-    canvasContainer.style.width = "960px";
-    canvasContainer.style.height = "600px";
-    loadingBar.style.display = "block";
-
-    var script = document.createElement("script");
-    script.src = loaderUrl;
-    script.onload = () => {
-      createUnityInstance(canvas, config, (progress) => {
-        progressBarFull.style.width = 100 * progress + "%";
-      }).then((instance) => {
-        unityInstance = instance;
-        unityReady = true;
-        loadingBar.style.display = "none";
-
-        const marker = document.querySelector("#image-marker");
-        let markerAlreadyDetected = false;
-        marker.addEventListener("markerFound", () => {
-          if (unityReady && !markerAlreadyDetected) {
-            markerAlreadyDetected = true;
-            unityInstance.SendMessage("CubeManager", "OnImageDetected", "pattern-Test");
-          }
-        });
-
-        marker.addEventListener("markerLost", () => {
-          if (unityReady && markerAlreadyDetected) {
-            markerAlreadyDetected = false;
-            unityInstance.SendMessage("CubeManager", "OnImageLost", "pattern-Test");
-          }
-        });
-
-        if (fullscreenButton) {
-          fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
-          };
+        webglContextAttributes: {
+          alpha: true,
+          preserveDrawingBuffer: true
         }
-      }).catch((message) => {
-        alert(message);
+      };
+
+      var container = document.querySelector("#unity-container");
+      var canvas = document.querySelector("#unity-canvas");
+      var canvasContainer = document.querySelector("#unity-canvas-container");
+      var loadingBar = document.querySelector("#unity-loading-bar");
+      var progressBarFull = document.querySelector("#unity-progress-bar-full");
+      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+      var unityInstance = null;
+      {{{ WEBXR_POLYFILL_CONFIG }}}
+
+      canvasContainer.style.width = "{{{ WIDTH }}}px";
+      canvasContainer.style.height = "{{{ HEIGHT }}}px";
+#if BACKGROUND_FILENAME
+      canvas.style.background = "url('" + buildUrl + "/{{{ BACKGROUND_FILENAME.replace(/'/g, '%27') }}}') center / cover";
+#endif
+      loadingBar.style.display = "block";
+
+      var script = document.createElement("script");
+      script.src = loaderUrl;
+      script.onload = () => {
+        createUnityInstance(canvas, config, (progress) => {
+          progressBarFull.style.width = 100 * progress + "%";
+        }).then((instance) => {
+          unityInstance = instance;
+          loadingBar.style.display = "none";
+          if (fullscreenButton)
+          {
+            fullscreenButton.onclick = () => {
+              unityInstance.SetFullscreen(1);
+            };
+          }
+        }).catch((message) => {
+          alert(message);
+        });
+      };
+      document.body.appendChild(script);
+
+      let enterARButton = document.getElementById('enterar');
+      let enterVRButton = document.getElementById('entervr');
+
+      document.addEventListener('onARSupportedCheck', function (event) {
+        enterARButton.disabled = !event.detail.supported;
+      }, false);
+      document.addEventListener('onVRSupportedCheck', function (event) {
+        enterVRButton.disabled = !event.detail.supported;
+      }, false);
+
+      enterARButton.addEventListener('click', function (event) {
+        unityInstance.Module.WebXR.toggleAR();
+      }, false);
+      enterVRButton.addEventListener('click', function (event) {
+        unityInstance.Module.WebXR.toggleVR();
+      }, false);
+
+      const marker = document.querySelector('#my-marker');
+
+      marker.addEventListener('markerFound', () => {
+        console.log('Marker detected!');
+        if (unityInstance) {
+          unityInstance.SendMessage('MarkerHandler', 'OnMarkerFound', 'Test');
+        }
       });
-    };
-    document.body.appendChild(script);
 
-    let enterARButton = document.getElementById('enterar');
-    let enterVRButton = document.getElementById('entervr');
-
-    document.addEventListener('onARSupportedCheck', function (event) {
-      enterARButton.disabled = !event.detail.supported;
-    }, false);
-    document.addEventListener('onVRSupportedCheck', function (event) {
-      enterVRButton.disabled = !event.detail.supported;
-    }, false);
-
-    enterARButton.addEventListener('click', function () {
-      unityInstance.Module.WebXR.toggleAR();
-    }, false);
-    enterVRButton.addEventListener('click', function () {
-      unityInstance.Module.WebXR.toggleVR();
-    }, false);
-  </script>
-  -->
-
-</body>
+      marker.addEventListener('markerLost', () => {
+        console.log('Marker lost!');
+        if (unityInstance) {
+          unityInstance.SendMessage('MarkerHandler', 'OnMarkerLost', 'Test');
+        }
+      });
+    </script>
+  </body>
 </html>
