--- a/index.html
+++ b/index.html
@@ -1,155 +1,218 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <meta name="viewport" content="width=960, height=600, initial-scale=1.0, user-scalable=no">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | TestAR</title>
-    <meta name="description" content="Just Testing if it works">
+    <title>Unity Web Player | UnityWebARProject</title>
+
+    <!-- A-Frame + AR.js -->
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar-nft.js"></script>
+
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+
+    <style>
+      html, body {
+        margin: 0;
+        overflow: hidden;
+        background: transparent;
+      }
+      #unity-container, #unity-canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background: transparent !important;
+        pointer-events: none; /* let A-Frame receive touches */
+      }
+      canvas {
+        background-color: transparent !important;
+      }
+    </style>
+
   </head>
-  <style>
-    #unity-container{
-      width: 960px;
-      height: 600px;
-      margin: auto;
-      position: relative;
-      z-index: 1;
-    }
-    canvas#unity-canvas{
-      width: 960px;
-      height: 600px;
-      background-color: transparent !important;
-    }
-  </style>
   <body>
-    <div id="unity-container">
-      <div id="unity-canvas-container" style="position: absolute; top: 0; left: 0; z-index: 1; width: 100%; height: 100%;">
-        <canvas id="unity-canvas" style="background-color: transparent;"></canvas>
-      </div>
+    <!-- AR.js Scene -->
+    <a-scene
+      vr-mode-ui="enabled: false"
+      embedded
+      arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+      renderer="logarithmicDepthBuffer: true; alpha: true"
+      id="scene"
+    >
+      <a-nft
+        type="nft"
+        url="UnityWebARTest/Descriptors/test2"
+        smooth="true"
+        smoothCount="10"
+        smoothTolerance="0.01"
+        smoothThreshold="5"
+        id="marker"
+      >
+        <a-light type="ambient" intensity="1"></a-light>
+      </a-nft>
+      <a-entity camera></a-entity>
+    </a-scene>
+    <!-- Unity Canvas -->
+    <div id="unity-container" class="unity-desktop">
+      <canvas id="unity-canvas" width="960" height="600" tabindex="-1" style="background-color: transparent;"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
         </div>
       </div>
+      <div id="unity-warning"> </div>
       <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <!-- <button id="entervr" value="Enter VR" disabled>VR</button>
-        <button id="enterar" value="Enter AR" disabled>AR</button> -->
-        <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank" title="WebXR Export">WebXR Export</a></div>
-        <!-- <div id="unity-build-title">{{{ PRODUCT_NAME }}}</div> -->
+        <div id="unity-logo-title-footer"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">UnityWebARProject</div>
       </div>
     </div>
-  <!-- AR.js & A-Frame -->
-  <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 
-  <a-scene
-    vr-mode-ui="enabled: false"
-    embedded
-    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
-    renderer="precision: mediump; logarithmicDepthBuffer: false;"
-    style="width: 960px; height: 600px;">
-    
-      <!-- Marker or NFT here -->
-    <a-nft
-      type="nft"
-      url="Descriptors/Test" 
-      smooth="true"
-      smoothCount="10"
-      smoothTolerance="0.01"
-      smoothThreshold="5"
-      id="my-marker">
-
-      <a-box color="red" position="0 0.5 0"></a-box>
-
-    </a-nft>
-    <a-entity camera></a-entity>
-  </a-scene>
+    <!-- Unity Loader Script -->
     <script>
+      var canvas = document.querySelector("#unity-canvas");
+
+      // Shows a temporary message banner/ribbon for a few seconds, or
+      // a permanent error message on top of the canvas if type=='error'.
+      // If type=='warning', a yellow highlight color is used.
+      // Modify or remove this function to customize the visually presented
+      // way that non-critical warnings and error messages are presented to the
+      // user.
+      function unityShowBanner(msg, type) {
+        var warningBanner = document.querySelector("#unity-warning");
+        function updateBannerVisibility() {
+          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+        }
+        var div = document.createElement('div');
+        div.innerHTML = msg;
+        warningBanner.appendChild(div);
+        if (type == 'error') div.style = 'background: red; padding: 10px;';
+        else {
+          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+          setTimeout(function() {
+            warningBanner.removeChild(div);
+            updateBannerVisibility();
+          }, 5000);
+        }
+        updateBannerVisibility();
+      }
+
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/UnityWebARTest.loader.js";
+      var loaderUrl = buildUrl + "/Build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/UnityWebARTest.data",
-        frameworkUrl: buildUrl + "/UnityWebARTest.framework.js",
-        codeUrl: buildUrl + "/UnityWebARTest.wasm",
+        arguments: [],
+        dataUrl: buildUrl + "/Build.data.br",
+        frameworkUrl: buildUrl + "/Build.framework.js.br",
+        codeUrl: buildUrl + "/Build.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "UnityWebARTest",
+        productName: "UnityWebARProject",
         productVersion: "0.1.0",
-
+        showBanner: unityShowBanner,
         webglContextAttributes: {
           alpha: true,
-          preserveDrawingBuffer: true
+          premultipliedAlpha: false
         }
       };
 
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var canvasContainer = document.querySelector("#unity-canvas-container");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var unityInstance = null;
+      // By default, Unity keeps WebGL canvas render target size matched with
+      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
+      // Set this to false if you want to decouple this synchronization from
+      // happening inside the engine, and you would instead like to size up
+      // the canvas DOM size and WebGL render target sizes yourself.
+      // config.matchWebGLToCanvasSize = false;
 
-      canvasContainer.style.width = "960px";
-      canvasContainer.style.height = "600px"
-      loadingBar.style.display = "block";
+      // If you would like all file writes inside Unity Application.persistentDataPath
+      // directory to automatically persist so that the contents are remembered when
+      // the user revisits the site the next time, uncomment the following line:
+      // config.autoSyncPersistentDataPath = true;
+      // This autosyncing is currently not the default behavior to avoid regressing
+      // existing user projects that might rely on the earlier manual
+      // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
+      // expected to change.
+
+      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+        // Mobile device style: fill the whole browser client area with the game canvas:
+
+        var meta = document.createElement('meta');
+        meta.name = 'viewport';
+        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+        document.getElementsByTagName('head')[0].appendChild(meta);
+        document.querySelector("#unity-container").className = "unity-mobile";
+        canvas.className = "unity-mobile";
+
+        // To lower canvas resolution on mobile devices to gain some
+        // performance, uncomment the following line:
+        // config.devicePixelRatio = 1;
+
+
+      } else {
+        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
+        canvas.style.width = "100%";
+        canvas.style.height = "100%";
+      }
+
+      document.querySelector("#unity-loading-bar").style.display = "block";
 
       var script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-        }).then((instance) => {
-          unityInstance = instance;
-          loadingBar.style.display = "none";
-          if (fullscreenButton)
-          {
-            fullscreenButton.onclick = () => {
-              unityInstance.SetFullscreen(1);
+          document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
+              }).then((unityInstance) => {
+                document.querySelector("#unity-loading-bar").style.display = "none";
+                document.querySelector("#unity-fullscreen-button").onclick = () => {
+                  unityInstance.SetFullscreen(1);
+                // Wait for a tap anywhere on the screen
+                //Inject Unity sync when it's ready
+                window.unityInstance = unityInstance;
+                document.body.addEventListener('click', () => {
+                  if (unityInstance) {
+                    unityInstance.SendMessage('CubeSpawner', 'SpawnCube');
+                  }
+                });
+              };
+              }).catch((message) => {
+                alert(message);
+              });
             };
-          }
-        }).catch((message) => {
-          alert(message);
-        });
-      };
+
+
       document.body.appendChild(script);
 
-      // let enterARButton = document.getElementById('enterar');
-      // let enterVRButton = document.getElementById('entervr');
-
-      // document.addEventListener('onARSupportedCheck', function (event) {
-      //   enterARButton.disabled = !event.detail.supported;
-      // }, false);
-      // document.addEventListener('onVRSupportedCheck', function (event) {
-      //   enterVRButton.disabled = !event.detail.supported;
-      // }, false);
-
-      // enterARButton.addEventListener('click', function (event) {
-      //   unityInstance.Module.WebXR.toggleAR();
-      // }, false);
-      // enterVRButton.addEventListener('click', function (event) {
-      //   unityInstance.Module.WebXR.toggleVR();
-      // }, false);
-
-      const marker = document.querySelector('#my-marker');
-
-      marker.addEventListener('markerFound', () => {
-        console.log('Marker detected!');
-        if (unityInstance) {
-          unityInstance.SendMessage('MarkerHandler', 'OnMarkerFound', 'Test');
-        }
-      });
-
-      marker.addEventListener('markerLost', () => {
-        console.log('Marker lost!');
-        if (unityInstance) {
-          unityInstance.SendMessage('MarkerHandler', 'OnMarkerLost', 'Test');
-        }
-      });
     </script>
+    <!-- JS Bridge from AR.js to Unity -->
+    <script>
+    AFRAME.registerComponent('sync-to-unity', {
+    tick: function () {
+      const marker = document.querySelector('#marker');
+      if (!marker || !marker.object3D.visible || typeof unityInstance === 'undefined') return;
+
+      const pos = marker.object3D.position;
+      const quat = marker.object3D.quaternion;
+
+      const jsonString = JSON.stringify({
+        position: { x: pos.x, y: pos.y, z: pos.z },
+        rotation: {
+          x: quat.x,
+          y: quat.y,
+          z: quat.z,
+          w: quat.w
+        }
+      });
+
+      unityInstance.SendMessage('CubeSpawner', 'UpdateTransformData', jsonString);
+    }
+  });
+
+  document.addEventListener("DOMContentLoaded", () => {
+    document.querySelector('a-scene').setAttribute('sync-to-unity', '');
+  });
+</script>
+
   </body>
 </html>
